[gd_scene load_steps=14 format=2]

[ext_resource path="res://Entities/Environment/Button/Button_Body.png" type="Texture" id=2]
[ext_resource path="res://Entities/Environment/Button/Environment_Button.gd" type="Script" id=3]
[ext_resource path="res://Entities/Environment/Button/Icons/gravity_up.png" type="Texture" id=4]
[ext_resource path="res://Entities/Environment/Button/Icons/gravity_left.png" type="Texture" id=5]
[ext_resource path="res://Entities/Environment/Button/Icons/gravity_right.png" type="Texture" id=6]
[ext_resource path="res://Entities/Environment/Button/Icons/gravity_down.png" type="Texture" id=7]
[ext_resource path="res://Entities/Environment/Button/Icons/open_panel_down.png" type="Texture" id=8]
[ext_resource path="res://Entities/Environment/Button/Icons/open_panel_left.png" type="Texture" id=9]
[ext_resource path="res://Entities/Environment/Button/Icons/open_panel_right.png" type="Texture" id=10]
[ext_resource path="res://Entities/Environment/Button/Icons/win.png" type="Texture" id=11]
[ext_resource path="res://Entities/Environment/Button/Icons/open_panel_up.png" type="Texture" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 96, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 48, 16 )

[node name="Environment_Button" type="Node2D"]
script = ExtResource( 3 )
icons = [ ExtResource( 11 ), ExtResource( 12 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 4 ), ExtResource( 7 ), ExtResource( 5 ), ExtResource( 6 ) ]
color_worm = Color( 0.603922, 0.384314, 0.819608, 1 )
color_left = Color( 0.831373, 0.258824, 0.419608, 1 )
color_right = Color( 0.141176, 0.607843, 0.74902, 1 )
color_rigid = Color( 0.84, 0.48986, 0.3276, 1 )
color_disabled = Color( 0.945098, 0.968627, 0.929412, 1 )

[node name="Tween" type="Tween" parent="."]

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
position = Vector2( 0, -8 )
z_index = -1
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="KinematicBody2D"]
modulate = Color( 0, 0, 0, 1 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 0, -16 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = -96.0
margin_top = -56.0
margin_right = -48.0
margin_bottom = -24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pressed_label" type="Label" parent="VBoxContainer"]
margin_right = 131.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.945098, 0.968627, 0.929412, 1 )
text = "event_id_pressed: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="released_label" type="Label" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 131.0
margin_bottom = 32.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.945098, 0.968627, 0.929412, 1 )
text = "event_id_released: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.945098, 0.968627, 0.929412, 1 )
position = Vector2( 0, -72 )
texture = ExtResource( 11 )

[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
